[package]
name = "rsapi"
version = "0.1.0"
authors = ["lencx <cxin1314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Powerful date and time functionality
chrono = { version = "0.4.11", features = ["serde"] }

# For connecting with the MySQL database
diesel = { version = "1.4.4", features = ["chrono"] }

# Lazy static initialization
lazy_static = "1.4.0"

# Rocket Webserver
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["json", "diesel_mysql_pool"] }

# Serialization/Deserialization
serde_json = "1.0.53"
serde = "1.0.110"
serde_derive = "1.0.110"